--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: multicool
-Title: Permutations of multisets in cool-lex order.
-Version: 0.1-2
-Date: 2013-07-08
-Author: James M. Curran, Aaron Williams, Dave Barber
-Maintainer: James M. Curran <j.curran@auckland.ac.nz>
-Description: A set of tools to permute multisets without loops or hash tables. The permutation functions are based on C code from Aaron Williams. Cool-lex order is similar to colexicographical order. The algorithm is described in Williams, A. Loopless Generation of Multiset Permutations by Prefix Shifts. SODA 2009, Symposium on Discrete Algorithms, New York, United States. The permutation code is distributed without restrictions. The code for stable and efficient computation of multinomial coefficients comes from Dave Barber. The code can be download from http://home.comcast.net/~tamivox/dave/multinomial/index.html and is distributed without conditions.
-License: GPL (>= 2)
-Packaged: 2013-07-07 22:57:33 UTC; curran
+Type: Package
+Title: Permutations of Multisets in Cool-Lex Order
+Version: 0.1-5
+Date: 2015-02-25
+Author: James Curran, Aaron Williams, Jerome Kelleher, Dave Barber
+Maintainer: James Curran <j.curran@auckland.ac.nz>
+Description: A set of tools to permute multisets without loops or hash tables and to generate integer partitions. The permutation functions are based on C code from Aaron Williams. Cool-lex order is similar to colexicographical order. The algorithm is described in Williams, A. Loopless Generation of Multiset Permutations by Prefix Shifts. SODA 2009, Symposium on Discrete Algorithms, New York, United States. The permutation code is distributed without restrictions. The code for stable and efficient computation of multinomial coefficients comes from Dave Barber. The code can be download from http://home.comcast.net/~tamivox/dave/multinomial/index.html and is distributed without conditions. The package also generates the integer partitions of a positive, non-zero integer n. The C++ code for this is based on Python code from Jerome Kelleher which can be found here http://jeromekelleher.net/partitions.php. The C++ code and Python code are distributed without conditions.
+License: GPL-2
+Imports: Rcpp (>= 0.11.2)
+LinkingTo: Rcpp
+Packaged: 2015-02-26 04:33:15 UTC; jcur002
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-07-10 07:33:50
+Date/Publication: 2015-02-26 07:20:59
